feat(BE-179): 스터디 단건과 목록 조회 기능 추가 (#96)
* feat: 스터디 단건과 목록 조회 기능 추가

* refactor: 사용하지 않는 코드 제거

* fix: 컴파일 오류 수정 [skip review]

* refactor: Lob 대신 columnDefinition으로 text 컬럼 정의

* refactor: 스터디 생성과 수정 DTO에 검증 어노테이션 추가

* refactor: count 쿼리의 반환값을 int에서 long으로 수정

* refactor: 인덴트 수정

* refactor: 단건 조회를 더 효율적으로 수행하고 목록 조회 시 발생하던 N+1 문제를 해결