@@ -1,5 +1,7 @@
 package aegis.server.domain.study.service;
 
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.util.ReflectionTestUtils;
 
@@ -9,6 +11,8 @@ import org.junit.jupiter.api.Test;
 import aegis.server.domain.member.domain.Member;
 import aegis.server.domain.study.domain.*;
 import aegis.server.domain.study.dto.request.StudyCreateUpdateRequest;
+import aegis.server.domain.study.dto.response.StudyDetailResponse;
+import aegis.server.domain.study.dto.response.StudySummaryResponse;
 import aegis.server.domain.study.repository.StudyMemberRepository;
 import aegis.server.domain.study.repository.StudyRepository;
 import aegis.server.global.exception.CustomException;
@@ -35,10 +39,110 @@ class StudyServiceTest extends IntegrationTest {
             StudyLevel.BASIC,
             "테스트 스터디 설명",
             StudyRecruitmentMethod.FCFS,
-            "10",
+            10,
             "매주 토요일 2시",
             "Java 기초부터 심화까지",
             "Java에 관심이 있는 분");
+
+    private StudyCreateUpdateRequest createStudyRequest(String title) {
+        return new StudyCreateUpdateRequest(
+                title,
+                StudyCategory.WEB,
+                StudyLevel.BASIC,
+                "테스트 스터디 설명",
+                StudyRecruitmentMethod.FCFS,
+                5,
+                "매주 토요일",
+                "테스트 커리큘럼",
+                "테스트 대상자");
+    }
+
+    private StudyCreateUpdateRequest createUpdateRequest() {
+        return new StudyCreateUpdateRequest(
+                "수정된 스터디",
+                StudyCategory.WEB,
+                StudyLevel.INTERMEDIATE,
+                "수정된 설명",
+                StudyRecruitmentMethod.APPLICATION,
+                5,
+                "매주 일요일 3시",
+                "디자인 심화 과정",
+                "디자인 경험자");
+    }
+
+    @Nested
+    class 스터디_상세_조회 {
+
+        @Test
+        void 성공한다() {
+            // given
+            Member member = createMember();
+            UserDetails userDetails = createUserDetails(member);
+            studyService.createStudy(studyCreateRequest, userDetails);
+            Study study = studyRepository.findAll().getFirst();
+
+            // when
+            StudyDetailResponse response = studyService.getStudyDetail(study.getId());
+
+            // then
+            assertEquals(study.getId(), response.id());
+            assertEquals("테스트 스터디", response.title());
+            assertEquals(0, response.participantCount());
+            assertEquals(10, response.maxParticipants());
+            assertEquals(member.getName(), response.instructor());
+        }
+
+        @Test
+        void 존재하지_않는_스터디면_실패한다() {
+            // when & then
+            CustomException exception = assertThrows(CustomException.class, () -> studyService.getStudyDetail(9999L));
+            assertEquals(ErrorCode.STUDY_NOT_FOUND, exception.getErrorCode());
+        }
+    }
+
+    @Nested
+    class 스터디_목록_조회 {
+
+        @Test
+        void 성공한다() {
+            // given
+            Member member1 = createMember();
+            Member member2 = createMember();
+            UserDetails userDetails1 = createUserDetails(member1);
+            UserDetails userDetails2 = createUserDetails(member2);
+
+            StudyCreateUpdateRequest request1 = createStudyRequest("스터디 1");
+            StudyCreateUpdateRequest request2 = createStudyRequest("스터디 2");
+
+            studyService.createStudy(request1, userDetails1);
+            studyService.createStudy(request2, userDetails2);
+
+            // when
+            List<StudySummaryResponse> response = studyService.getStudyList();
+
+            // then
+            assertEquals(2, response.size());
+
+            StudySummaryResponse study1 = response.getFirst();
+            assertEquals("스터디 1", study1.title());
+            assertEquals(0, study1.participantCount());
+            assertEquals(member1.getName(), study1.instructor());
+
+            StudySummaryResponse study2 = response.get(1);
+            assertEquals("스터디 2", study2.title());
+            assertEquals(0, study2.participantCount());
+            assertEquals(member2.getName(), study2.instructor());
+        }
+
+        @Test
+        void 스터디가_없다면_빈_리스트를_반환한다() {
+            // when
+            List<StudySummaryResponse> response = studyService.getStudyList();
+
+            // then
+            assertTrue(response.isEmpty());
+        }
+    }
 
     @Nested
     class 스터디_생성 {
@@ -53,7 +157,7 @@ class StudyServiceTest extends IntegrationTest {
             studyService.createStudy(studyCreateRequest, userDetails);
 
             // then
-            Study study = studyRepository.findAll().get(0);
+            Study study = studyRepository.findAll().getFirst();
             assertEquals("테스트 스터디", study.getTitle());
             assertEquals(StudyCategory.COMPUTER_SCIENCE, study.getCategory());
             assertEquals(StudyLevel.BASIC, study.getLevel());
@@ -87,18 +191,9 @@ class StudyServiceTest extends IntegrationTest {
             Member member = createMember();
             UserDetails userDetails = createUserDetails(member);
             studyService.createStudy(studyCreateRequest, userDetails);
-            Study study = studyRepository.findAll().get(0);
+            Study study = studyRepository.findAll().getFirst();
 
-            StudyCreateUpdateRequest updateRequest = new StudyCreateUpdateRequest(
-                    "수정된 스터디",
-                    StudyCategory.WEB,
-                    StudyLevel.INTERMEDIATE,
-                    "수정된 설명",
-                    StudyRecruitmentMethod.APPLICATION,
-                    "5",
-                    "매주 일요일 3시",
-                    "디자인 심화 과정",
-                    "디자인 경험자");
+            StudyCreateUpdateRequest updateRequest = createUpdateRequest();
 
             // when
             studyService.updateStudy(study.getId(), updateRequest, userDetails);
@@ -117,7 +212,7 @@ class StudyServiceTest extends IntegrationTest {
             Member member = createMember();
             UserDetails userDetails = createUserDetails(member);
             studyService.createStudy(studyCreateRequest, userDetails);
-            Study study = studyRepository.findAll().get(0);
+            Study study = studyRepository.findAll().getFirst();
 
             UserDetails invalidUserDetails = createUserDetails(member);
             ReflectionTestUtils.setField(invalidUserDetails, "memberId", member.getId() + 1L);
@@ -150,7 +245,7 @@ class StudyServiceTest extends IntegrationTest {
             UserDetails otherUserDetails = createUserDetails(otherMember);
 
             studyService.createStudy(studyCreateRequest, instructorDetails);
-            Study study = studyRepository.findAll().get(0);
+            Study study = studyRepository.findAll().getFirst();
 
             // when & then
             CustomException exception = assertThrows(
